--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             Selected: <span id="location_selected"></span>
           </p>
         </div>
-        <div class="wather">
-          <div class="wather_current_day">
+        <div class="weather">
+          <div class="weather_current_day">
             <div class="curent_day_temperature">
               <p><span id="current_temperature"></span>°C</p>
               <p>Feels like <span id="current_temperature_feels"></span>°C</p>
             </div>
-            <div class="current_day_wather">
-              <p id="current_day_wather_status"></p>
-              <p id="current_day_wather_description"></p>
+            <div class="current_day_weather">
+              <p id="current_day_weather_status"></p>
+              <p id="current_day_weather_description"></p>
             </div>
             <dir id="current_day_img" class="current_day_img"></dir>
           </div>
-          <div id="wather_nextdays" class="wather_nextdays"></div>
+          <div id="weather_nextdays" class="weather_nextdays"></div>
         </div>
       </div>
     </div>
