clean input button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               name="search_location"
               placeholder="Enter location (Kiev, UA)"
             />
+            <button type="reset" ></button>
           </form>
           <p class="location_selected">
             Selected: <span id="location_selected"></span>
