Add search buttun and save in localStorege last request

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
               name="search_location"
               placeholder="Enter location (Kiev, UA)"
             />
-            <button type="reset" ></button>
+            <div class="buttons">
+              <button type="reset"></button>
+              <button type="submit"></button>
+            </div>
           </form>
           <p class="location_selected">
             Selected: <span id="location_selected"></span>
